添加评论插件 disqus

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         repo: "",
         // 自动生成侧边栏
         loadSidebar: true,
-        depth: 6
+        depth: 6,
+        disqus: "shortname"
       };
     </script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
     <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
+    <script src="//unpkg.com/docsify/lib/plugins/disqus.min.js"></script>
   </body>
 </html>
