更新配置 disqus, 使用正确的评论 id

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <div id="app"></div>
     <script>
       window.$docsify = {
-        name: "朱颜血",
-        repo: "",
+        name: '朱颜血',
+        repo: '',
         // 自动生成侧边栏
         loadSidebar: true,
+        // 搜索最大深度
         depth: 6,
-        disqus: "shortname"
-      };
+        // 添加评论
+        disqus: 'zhuyanxue',
+      }
     </script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
     <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
