--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/themes/vue.css"
+    />
   </head>
   <body>
     <div id="app"></div>
@@ -25,8 +28,8 @@
         disqus: 'zhuyanxue',
       }
     </script>
-    <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-    <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
-    <script src="//unpkg.com/docsify/lib/plugins/disqus.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/docsify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/plugins/search.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/plugins/disqus.min.js"></script>
   </body>
 </html>
