--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
+    <meta
+      name="google-site-verification"
+      content="45OYsFwKdODFL2YuPhiD3NvU9brZmJEgOPTt2phBQp8"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/themes/vue.css"
