--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/themes/vue.css"
+      href="https://cdn.jsdelivr.net/npm/docsify-themeable@0.8.1/dist/css/theme-simple.css"
     />
   </head>
   <body>
@@ -32,11 +32,23 @@
         disqus: 'zhuyanxue',
         // Google analytics 跟踪 ID
         ga: 'UA-123951706-4',
+        themeable: {
+          readyTransition: true, // default
+          responsiveTables: true, // default
+        },
+        pagination: {
+          previousText: '上一章节',
+          nextText: '下一章节',
+          crossChapter: true,
+          crossChapterText: true,
+        },
       }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/docsify.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/plugins/search.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/plugins/disqus.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/plugins/ga.min.js"></script>
+    <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0.8.1"></script>
   </body>
 </html>
