--- a/index.html
+++ b/index.html
@@ -42,13 +42,27 @@
           crossChapter: true,
           crossChapterText: true,
         },
+        plugins: [
+          function (hook, vm) {
+            hook.afterEach(function (html, next) {
+              // Invoked each time after the Markdown file is parsed.
+              // beforeEach and afterEach support asynchronous。
+              // ...
+              // call `next(html)` when task is done.
+              next(html)
+              // 滚动到顶部
+              document.body.scrollTop = document.documentElement.scrollTop = 0
+            })
+          },
+        ],
       }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/docsify.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/plugins/search.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/plugins/disqus.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4.9.4/lib/plugins/ga.min.js"></script>
-    <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+    <script src="https://unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+    <script src="https://unpkg.com/docsify-sidebar-collapse@1.1.3/dist/docsify-sidebar-collapse.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0.8.1"></script>
   </body>
 </html>
