--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description" />
+    <meta name="giscus:backlink" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify/themes/dark.css">
@@ -31,9 +32,21 @@
     "crossorigin": "anonymous"
   }
 }
+      if (window.$docsify.giscus) {
+        window.$docsify.giscus = {
+          ...window.$docsify.giscus,
+          mapping: 'specific',
+          get term() {
+            return location.hash.split('#')[1]
+          },
+          get backlink() {
+            return location.href
+          },
+        }
+      }
     </script>
     <!-- Docsify v4 -->
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-    <script src="https://unpkg.com/docsify-giscus@1.0.0/dist/docsify-giscus.min.js"></script>
+    <script src="./docsify-giscus.js"></script>
   </body>
 </html>
